--- a/hs_core/templates/pages/metadata_terms.html
+++ b/hs_core/templates/pages/metadata_terms.html
@@ -735,15 +735,24 @@
         <ul >
             <li><strong>Term: </strong>ModelVersionNumber</li>
             <li><strong>URI: </strong><a href="#ModelVersionNumber">http://www.hydroshare.org/terms/ModelVersionNumber</a></li>
-            <li><strong>Label: </strong>Model Version Number</li>
+            <li><strong>Label: </strong>Version</li>
             <li><strong>Description: </strong>Model version and/or build number (e.g., SWAT2012 rev. 629)</li>
         </ul>
+    <br/>
+    <a name="ModelProgramLanguage"></a>
+        <ul >
+            <li><strong>Term: </strong>ModelProgramLanguage</li>
+            <li><strong>URI: </strong><a href="#ModelProgramLanguage">http://www.hydroshare.org/terms/ModelProgramLanguage</a></li>
+            <li><strong>Label: </strong>Language</li>
+            <li><strong>Description: </strong>The programming language(s) that the model was written in</li>
+        </ul>
+    <br/>
     <br/>
     <a name="SupportedOperatingSystem"></a>
         <ul >
             <li><strong>Term: </strong>SupportedOperatingSystem</li>
             <li><strong>URI: </strong><a href="#SupportedOperatingSystem">http://www.hydroshare.org/terms/SupportedOperatingSystem</a></li>
-            <li><strong>Label: </strong>Supported Operating System</li>
+            <li><strong>Label: </strong>Operating System</li>
             <li><strong>Description: </strong>Compatible operating systems (e.g., Mac OS X version 10.7 and later)</li>
         </ul>
     <br/>
@@ -751,7 +760,7 @@
         <ul >
             <li><strong>Term: </strong>ModelReleaseDate</li>
             <li><strong>URI: </strong><a href="#ModelReleaseDate">http://www.hydroshare.org/terms/ModelReleaseDate</a></li>
-            <li><strong>Label: </strong>Model Release Date</li>
+            <li><strong>Label: </strong>Release Date</li>
             <li><strong>Description: </strong>The date that this version of the model was released</li>
         </ul>
     <br/>
@@ -759,46 +768,46 @@
         <ul >
             <li><strong>Term: </strong>ModelReleaseNotes</li>
             <li><strong>URI: </strong><a href="#ModelReleaseNotes">http://www.hydroshare.org/terms/ModelReleaseNotes</a></li>
-            <li><strong>Label: </strong>Model Release Notes</li>
+            <li><strong>Label: </strong>Release Notes</li>
             <li><strong>Description: </strong>Notes regarding the software release</li>
         </ul>
     <br/>
-    <a name="ModelWebpage"></a>
+    <a name="ModelWebsite"></a>
         <ul >
-            <li><strong>Term: </strong>ModelWebpage</li>
-            <li><strong>URI: </strong><a href="#ModelWebpage">http://www.hydroshare.org/terms/ModelWebpage</a></li>
-            <li><strong>Label: </strong>Model Webpage</li>
-            <li><strong>Description: </strong>A URL to the webpage maintained by the model developers</li>
+            <li><strong>Term: </strong>ModelWebsite</li>
+            <li><strong>URI: </strong><a href="#ModelWebsite">http://www.hydroshare.org/terms/ModelWebsite</a></li>
+            <li><strong>Label: </strong>Website</li>
+            <li><strong>Description: </strong>A URL to the website maintained by the model developers</li>
         </ul>
     <br/>
     <a name="CodeRepository"></a>
         <ul >
             <li><strong>Term: </strong>CodeRepository</li>
             <li><strong>URI: </strong><a href="#CodeRepository">http://www.hydroshare.org/terms/CodeRepository</a></li>
-            <li><strong>Label: </strong>Code Repository</li>
+            <li><strong>Label: </strong>Software Repository</li>
             <li><strong>Description: </strong>A URL to the source code repository (e.g., Github, Bitbucket, etc.)</li>
         </ul>
     <br/>
-    <a name="ModelUserManual"></a>
+    <a name="hasModelUserManual"></a>
         <ul >
-            <li><strong>Term: </strong>ModelUserManual</li>
-            <li><strong>URI: </strong><a href="#ModelUserManual">http://www.hydroshare.org/terms/ModelUserManual</a></li>
-            <li><strong>Label: </strong>Model User Manual</li>
+            <li><strong>Term: </strong>hasModelUserManual</li>
+            <li><strong>URI: </strong><a href="#hasModelUserManual">http://www.hydroshare.org/terms/hasModelUserManual</a></li>
+            <li><strong>Label: </strong>User Manual</li>
             <li><strong>Description: </strong>Uploaded content that describes the general use of the model</li>
         </ul>
     <br/>
-    <a name="ModelTheoreticalManual"></a>
+    <a name="hasModelTheoreticalManual"></a>
         <ul >
-            <li><strong>Term: </strong>ModelTheoreticalManual</li>
-            <li><strong>URI: </strong><a href="#ModelTheoreticalManual">http://www.hydroshare.org/terms/ModelTheoreticalManual</a></li>
-            <li><strong>Label: </strong>Model Theoretical Manual</li>
+            <li><strong>Term: </strong>hasModelTheoreticalManual</li>
+            <li><strong>URI: </strong><a href="#hasModelTheoreticalManual">http://www.hydroshare.org/terms/hasModelTheoreticalManual</a></li>
+            <li><strong>Label: </strong>Theoretical Manual</li>
             <li><strong>Description: </strong>Uploaded content that describes the theoretical representation of the model</li>
         </ul>
     <br/>
-    <a name="SourceCode"></a>
+    <a name="hasSourceCode"></a>
         <ul >
-            <li><strong>Term: </strong>SourceCode</li>
-            <li><strong>URI: </strong><a href="#SourceCode">http://www.hydroshare.org/terms/SourceCode</a></li>
+            <li><strong>Term: </strong>hasSourceCode</li>
+            <li><strong>URI: </strong><a href="#hasSourceCode">http://www.hydroshare.org/terms/hasSourceCode</a></li>
             <li><strong>Label: </strong>Source Code</li>
             <li><strong>Description: </strong>Uploaded archive containing the source code of the model</li>
         </ul>
@@ -820,7 +829,7 @@
         <ul >
             <li><strong>Term: </strong>IncludesModelOutput</li>
             <li><strong>URI: </strong><a href="#IncludesModelOutput">http://www.hydroshare.org/terms/IncludesModelOutput</a></li>
-            <li><strong>Label: </strong>Includes Model Output</li>
+            <li><strong>Label: </strong>Includes output</li>
             <li><strong>Description: </strong>A boolean value that indicates if the output files are included with the uploaded content</li>
         </ul>
     <br/>
@@ -835,14 +844,14 @@
         <ul >
             <li><strong>Term: </strong>ModelProgramName</li>
             <li><strong>URI: </strong><a href="#ModelProgramName">http://www.hydroshare.org/terms/ModelProgramName</a></li>
-            <li><strong>Label: </strong>Model Program Name</li>
+            <li><strong>Label: </strong>Model name</li>
             <li><strong>Description: </strong>The name of the model that executes the current resource</li>
         </ul>
     <a name="ModelProgramURL"></a>
         <ul >
             <li><strong>Term: </strong>ModelProgramURL</li>
             <li><strong>URI: </strong><a href="#ModelProgramURL">http://www.hydroshare.org/terms/ModelProgramURL</a></li>
-            <li><strong>Label: </strong>Model Program URL</li>
+            <li><strong>Label: </strong>Resource URL</li>
             <li><strong>Description: </strong>The HydroShare URL of the Model Program resource that executes the current resource</li>
         </ul>
 
@@ -879,70 +888,70 @@
         <ul >
             <li><strong>Term: </strong>warm-upPeriodType</li>
             <li><strong>URI: </strong><a href="#warm-upPeriodType">http://www.hydroshare.org/terms/warm-upPeriodType</a></li>
-            <li><strong>Label: </strong>Warm-up Period Type</li>
+            <li><strong>Label: </strong>Warm-up period type</li>
             <li><strong>Description: </strong>The warm-up period type</li>
         </ul>
     <a name="warm-upPeriodValue"></a>
         <ul >
             <li><strong>Term: </strong>warm-upPeriodValue</li>
             <li><strong>URI: </strong><a href="#warm-upPeriodValue">http://www.hydroshare.org/terms/warm-upPeriodValue</a></li>
-            <li><strong>Label: </strong>Warm-up Period Value</li>
+            <li><strong>Label: </strong>Warm-up period in years</li>
             <li><strong>Description: </strong>The numeric value of the warm-up period in years</li>
         </ul>
     <a name="rainfallTimeStepType"></a>
         <ul >
             <li><strong>Term: </strong>rainfallTimeStepType</li>
             <li><strong>URI: </strong><a href="#rainfallTimeStepType">http://www.hydroshare.org/terms/rainfallTimeStepType</a></li>
-            <li><strong>Label: </strong>Rainfall Time Step Type</li>
+            <li><strong>Label: </strong>Rainfall time step type</li>
             <li><strong>Description: </strong>The type of time step used in the simulation for input rainfall data (e.g. Daily or Sub-hourly)</li>
         </ul>
     <a name="rainfallTimeStepValue"></a>
         <ul >
             <li><strong>Term: </strong>rainfallTimeStepValue</li>
             <li><strong>URI: </strong><a href="#rainfallTimeStepValue">http://www.hydroshare.org/terms/rainfallTimeStepValue</a></li>
-            <li><strong>Label: </strong>Rainfall Time Step Value</li>
+            <li><strong>Label: </strong>Rainfall time step value</li>
             <li><strong>Description: </strong>The time step value associated with the rainfall data</li>
         </ul>
     <a name="routingTimeStepType"></a>
         <ul >
             <li><strong>Term: </strong>routingTimeStepType</li>
             <li><strong>URI: </strong><a href="#routingTimeStepType">http://www.hydroshare.org/terms/routingTimeStepType</a></li>
-            <li><strong>Label: </strong>Routing Time Step Type</li>
+            <li><strong>Label: </strong>Routing time step type</li>
             <li><strong>Description: </strong>The type of time step used in the simulation for river routing calculations (e.g. Daily or Hourly)</li>
         </ul>
     <a name="routingTimeStepValue"></a>
         <ul >
             <li><strong>Term: </strong>routingTimeStepValue</li>
             <li><strong>URI: </strong><a href="#routingTimeStepValue">http://www.hydroshare.org/terms/routingTimeStepValue</a></li>
-            <li><strong>Label: </strong>Routing Time Step Value</li>
+            <li><strong>Label: </strong>Routing time step value</li>
             <li><strong>Description: </strong>The time step value used for the river routing calculations</li>
         </ul>
     <a name="simulationTimeStepType"></a>
         <ul >
             <li><strong>Term: </strong>simulationTimeStepType</li>
             <li><strong>URI: </strong><a href="#simulationTimeStepType">http://www.hydroshare.org/terms/simulationTimeStepType</a></li>
-            <li><strong>Label: </strong>Simulation Time Step Type</li>
+            <li><strong>Label: </strong>Simulation time step type</li>
             <li><strong>Description: </strong>The type of time step type used for model simulation (e.g. Annual, Monthly, Daily, or Hourly)</li>
         </ul>
     <a name="simulationTimeStepValue"></a>
         <ul >
             <li><strong>Term: </strong>simulationTimeStepValue</li>
             <li><strong>URI: </strong><a href="#simulationTimeStepValue">http://www.hydroshare.org/terms/simulationTimeStepValue</a></li>
-            <li><strong>Label: </strong>Simulation Time Step Value</li>
+            <li><strong>Label: </strong>Simulation time step value</li>
             <li><strong>Description: </strong>The time step value used for simulation</li>
         </ul>
     <a name="watershedArea"></a>
         <ul >
             <li><strong>Term: </strong>watershedArea</li>
             <li><strong>URI: </strong><a href="#watershedArea">http://www.hydroshare.org/terms/watershedArea</a></li>
-            <li><strong>Label: </strong>Watershed Area</li>
+            <li><strong>Label: </strong>Waterhsed area in square kilometers</li>
             <li><strong>Description: </strong>The watershed area in Km&sup2</li>
         </ul>
     <a name="numberOfSubbasins"></a>
         <ul >
             <li><strong>Term: </strong>numberOfSubbasins</li>
             <li><strong>URI: </strong><a href="#numberOfSubbasins">http://www.hydroshare.org/terms/numberOfSubbasins</a></li>
-            <li><strong>Label: </strong>Number of Subbasins</li>
+            <li><strong>Label: </strong>Number of subbasins</li>
             <li><strong>Description: </strong>The number of the subbasin within the watershed</li>
         </ul>
     <a name="numberOfHRUs"></a>
@@ -956,49 +965,49 @@
         <ul >
             <li><strong>Term: </strong>DEMResolution</li>
             <li><strong>URI: </strong><a href="#DEMResolution">http://www.hydroshare.org/terms/DEMResolution</a></li>
-            <li><strong>Label: </strong>DEM Resolution</li>
+            <li><strong>Label: </strong>DEM resolution in meters</li>
             <li><strong>Description: </strong>The resolution of the Digital Elevation Model in meters</li>
         </ul>
     <a name="DEMSourceName"></a>
         <ul >
             <li><strong>Term: </strong>DEMSourceName</li>
             <li><strong>URI: </strong><a href="#DEMSourceName">http://www.hydroshare.org/terms/DEMSourceName</a></li>
-            <li><strong>Label: </strong>DEM Source Name</li>
+            <li><strong>Label: </strong>DEM source name</li>
             <li><strong>Description: </strong>The name of the Digital Elevation Model dataset provider</li>
         </ul>
     <a name="DEMSourceURL"></a>
         <ul >
             <li><strong>Term: </strong>DEMSourceURL</li>
             <li><strong>URI: </strong><a href="#DEMSourceURL">http://www.hydroshare.org/terms/DEMSourceURL</a></li>
-            <li><strong>Label: </strong>DEM Source URL</li>
+            <li><strong>Label: </strong>DEM source URL</li>
             <li><strong>Description: </strong>The URL of the Digital Elevation Model dataset (if applicable)</li>
         </ul>
     <a name="landUseDataSourceName"></a>
         <ul >
             <li><strong>Term: </strong>landUseDataSourceName</li>
             <li><strong>URI: </strong><a href="#landUseDataSourceName">http://www.hydroshare.org/terms/landUseDataSourceName</a></li>
-            <li><strong>Label: </strong>Land Use Data Source Name</li>
+            <li><strong>Label: </strong>LandUse data source name</li>
             <li><strong>Description: </strong>The name for the Landuse dataset provider</li>
         </ul>
     <a name="landUseDataSourceURL"></a>
         <ul >
             <li><strong>Term: </strong>landUseDataSourceURL</li>
             <li><strong>URI: </strong><a href="#landUseDataSourceURL">http://www.hydroshare.org/terms/landUseDataSourceURL</a></li>
-            <li><strong>Label: </strong>Land Use Data Source URL</li>
+            <li><strong>Label: </strong>LandUse data source URL</li>
             <li><strong>Description: </strong>The URL for the Landuse dataset (if applicable)</li>
         </ul>
     <a name="soilDataSourceName"></a>
         <ul >
             <li><strong>Term: </strong>soilDataSourceName</li>
             <li><strong>URI: </strong><a href="#soilDataSourceName">http://www.hydroshare.org/terms/soilDataSourceName</a></li>
-            <li><strong>Label: </strong>Soil Data Source Name</li>
+            <li><strong>Label: </strong>Soil data source name</li>
             <li><strong>Description: </strong>The name for Soil dataset provider</li>
         </ul>
     <a name="soilDataSourceURL"></a>
         <ul >
             <li><strong>Term: </strong>soilDataSourceURL</li>
             <li><strong>URI: </strong><a href="#soilDataSourceURL">http://www.hydroshare.org/terms/soilDataSourceURL</a></li>
-            <li><strong>Label: </strong>Soil Data Source URL</li>
+            <li><strong>Label: </strong>Soil data source URL</li>
             <li><strong>Description: </strong>The URL for Soil dataset (if applicable)</li>
         </ul>
     <br/>
@@ -1013,21 +1022,21 @@
         <ul >
             <li><strong>Term: </strong>runoffCalculationMethod</li>
             <li><strong>URI: </strong><a href="#runoffCalculationMethod">http://www.hydroshare.org/terms/runoffCalculationMethod</a></li>
-            <li><strong>Label: </strong>Runoff Calculation Method</li>
+            <li><strong>Label: </strong>Runoff calculation method</li>
             <li><strong>Description: </strong>The runoff calculation method used</li>
         </ul>
     <a name="flowRoutingMethod"></a>
         <ul >
             <li><strong>Term: </strong>flowRoutingMethod</li>
             <li><strong>URI: </strong><a href="#flowRoutingMethod">http://www.hydroshare.org/terms/flowRoutingMethod</a></li>
-            <li><strong>Label: </strong>Flow Routing Method</li>
+            <li><strong>Label: </strong>Flow routing method</li>
             <li><strong>Description: </strong>The flow routing method used</li>
         </ul>
     <a name="PETEstimationMethod"></a>
         <ul >
             <li><strong>Term: </strong>PETEstimationMethod</li>
             <li><strong>URI: </strong><a href="#PETEstimationMethod">http://www.hydroshare.org/terms/PETEstimationMethod</a></li>
-            <li><strong>Label: </strong>PET Estimation Method</li>
+            <li><strong>Label: </strong>PET estimation method</li>
             <li><strong>Description: </strong>The Potential EvapoTranspiration estimation method used</li>
         </ul>
     <br/>
