[503] some clean up, fix files removal bug

--- a/hs_geographic_feature_resource/templates/pages/geographicfeatureresource.html
+++ b/hs_geographic_feature_resource/templates/pages/geographicfeatureresource.html
@@ -203,7 +203,7 @@
         }
     };
 
-    del_msg_shp_shx_dbf = "The 'shp', 'shx' and 'dbf' are three mandatory files. This operation is about to permanently remove all existing files of this resource!"
+    del_msg_shp_shx_dbf = "Be Careful! The 'shp', 'shx' and 'dbf' are three mandatory files. This operation is about to permanently DELETE ALL EXISTING FILES of this resource!"
     del_msg_prj = "This operation is about to remove coordinate system metadata!"
     $(document).ready(function(){
 
