--- a/hs_tools_resource/templates/pages/toolresource.html
+++ b/hs_tools_resource/templates/pages/toolresource.html
@@ -77,3 +77,28 @@
         </div>
     {%  endif %}
 {%  endblock %}
+
+
+
+
+{% block extra_js %}
+
+{{ block.super }}
+    <div id="checked_res_div" hidden="true">{{  checked_res }}</div>
+
+{# put resource specific js below #}
+<script type="text/javascript">
+
+    $(document).ready(function(){
+        checked_res_str=$("#checked_res_div").text()
+        checked_res_array=checked_res_str.split(",")
+        for (i = 0; i < checked_res_array.length; i++)
+        {
+            checked_res_item=checked_res_array[i]
+            $("input[value='"+checked_res_item+"']").attr("checked","true");
+
+        }
+    })
+</script>
+
+{% endblock %}
