--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -24,7 +24,7 @@
             {%  endif %}
         {% endblock %}
 
-            {#  ======= Missing fields notification =======#}
+            {# ======= Missing fields notification =======#}
             {% if not metadata_form and page.perms.change %}
                 {% if missing_metadata_elements or title|stringformat:"s" == "Untitled resource" %}
                     <div class="alert alert-success alert-dismissible" role="alert">
@@ -415,7 +415,7 @@
                         <div class="panel-body">
                             <div class="col-md-4">
                                 <div class="custom-well">
-                                    <h5 class="access-panel-title"><strong>Users with full read/write permissions on this resource</strong></h5>
+                                    <h5 class="access-panel-title"><strong>Owners with full permissions to do anything on this resource</strong></h5>
 
                                     <form action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/"
                                           method="POST">
@@ -758,7 +758,6 @@
                             {% endif %}
                         {% endif %}
                     {% endif %}
-{#                    {% if relevant_tools or metadata_form %}#}
                     {% if relevant_tools %}
                         <li class="col-xs-2 col-md-2">
                             <a href="#relevantTools" data-toggle="tab">
@@ -1169,7 +1168,7 @@
                                 </div>
                                 <div id="div_id_northlimit" class="control-group"><label
                                         for="id_northlimit" class="control-label requiredField">
-                                    North Longitude (WGS 84 decimal degrees)<span class="asteriskField">*</span></label>
+                                    North Latitude (WGS 84 decimal degrees)<span class="asteriskField">*</span></label>
 
                                     <div class="controls"><input class="form-control input-sm textinput textInput"
                                                                  id="id_northlimit" name="northlimit" type="text"
@@ -1179,7 +1178,7 @@
                                 </div>
                                 <div id="div_id_eastlimit" class="control-group"><label
                                         for="id_eastlimit" class="control-label requiredField">
-                                    East Latitude (WGS 84 decimal degrees)<span class="asteriskField">*</span></label>
+                                    East Longitude (WGS 84 decimal degrees)<span class="asteriskField">*</span></label>
 
                                     <div class="controls"><input class="form-control input-sm textinput textInput"
                                                                  id="id_eastlimit" name="eastlimit" type="text"
@@ -1188,7 +1187,7 @@
                                 </div>
                                 <div id="div_id_southlimit" class="control-group"><label
                                         for="id_southlimit" class="control-label requiredField">
-                                    South Longitude (WGS 84 decimal degrees)<span class="asteriskField">*</span></label>
+                                    South Latitude (WGS 84 decimal degrees)<span class="asteriskField">*</span></label>
 
                                     <div class="controls"><input class="form-control input-sm textinput textInput"
                                                                  id="id_southlimit" name="southlimit" type="text"
@@ -1197,7 +1196,7 @@
                                 </div>
                                 <div id="div_id_westlimit" class="control-group"><label
                                         for="id_westlimit" class="control-label requiredField">
-                                    West Latitude (WGS 84 decimal degrees)<span class="asteriskField">*</span></label>
+                                    West Longitude (WGS 84 decimal degrees)<span class="asteriskField">*</span></label>
 
                                     <div class="controls"><input class="form-control input-sm textinput textInput"
                                                                  id="id_westlimit" name="westlimit" type="text"
@@ -1395,18 +1394,19 @@
                     {%  else %}
                        {%  crispy metadata_form  %}
                     {%  endif %}
+                    {% block extra_section %} {# add extra section for resource landing page #}
+                    {% endblock %}
                     </div>
                     {%  endif %}
                 {%  endif %}
             {%  endif %}
                 <!-- ========= RELEVANT TOOLS TAB ========= -->
-{#            {% if relevant_tools or metadata_form %}#}
             {% if relevant_tools %}
                 <div class="tab-pane" id="relevantTools">
                 {% if not metadata_form %}
                     {% for tool in relevant_tools %}
                         <h4>{{ tool.title }}</h4>
-                        <a href="{{ tool.url }}" target="_blank"><button class="btn btn-primary">Launch Web App</button></a>
+                        <a href="{{ tool.url }}" target="_blank"><button class="btn btn-primary">Launch</button></a>
                         <hr>
                     {% endfor %}
                 {% else %}
@@ -1418,6 +1418,13 @@
             </div>
             </div>
         <!-- ==== Tabs end ==== -->
+
+
+
+
+        <div class="rating">
+            {% rating_for cm %}
+        </div>
         {% comments_for cm %}
         {#                #}
         {# dialogs follow #}
@@ -2266,7 +2273,7 @@
             $alert_error = '<div class="alert alert-danger" id="error-alert"> \
                 <button type="button" class="close" data-dismiss="alert">x</button> \
                 <strong>Error! </strong> \
-                Metadata updated failed.\
+                Metadata failed to update.\
             </div>'
             $form=$('#' + form_id);
             var datastring = $form.serialize();
